Updated Doctor Home Page

--- a/frontend/src/css/PatientHome.css
+++ b/frontend/src/css/PatientHome.css
@@ -432,7 +432,7 @@ body {
 }
 .red-button {
   background-color: #f53924 !important;
-  color: white; !important
+  color: white !important;
   color: white ; 
   border: none;
   padding: 8px 14px;
